# ogs5

./: .clang-format  .travis.yml  CMakeLists.txt  README.md
Base/: BuildInfo.h  CMakeLists.txt  DateTools.cpp  DateTools.h  FileFinder.h  FileTools.cpp  FileTools.h  Histogram.h  MemWatch.cpp  MemWatch.h  StringTools.cpp  StringTools.h  binarySearch.cpp  binarySearch.h  break.cpp  display.cpp  display.h  isnan.h  makros.cpp  makros.h  memory.cpp  printList.h  quicksort.h  swap.h  timer.cpp  uniqueListInsert.h  wait.h
FEM/: BoundaryCondition.cpp  BoundaryCondition.h  CAP_IO.cpp  CAP_IO.h  CMakeLists.txt  Constrained.h  DUMUX.cpp  DUMUX.h  DistributionInfo.cpp  DistributionInfo.h  DistributionTools.cpp  DistributionTools.h  Eclipse.cpp  Eclipse.h  FEMCondition.cpp  FEMCondition.h  FEMEnums.cpp  FEMEnums.h  GeoInfo.cpp  GeoInfo.h  InitialCondition.cpp  InitialCondition.h  LinearFunctionData.cpp  LinearFunctionData.h  Output.cpp  Output.h  OutputTools.h  PhysicalConstant.h  ProcessInfo.cpp  ProcessInfo.h  SourceTerm.cpp  SourceTerm.h  SparseMatrixDOK.cpp  SparseMatrixDOK.h  SplitMPI_Communicator.cpp  Stiff_Bulirsch-Stoer.cpp  Stiff_Bulirsch-Stoer.h  SwitchBC.h  conversion_rate.cpp  conversion_rate.h  (+85 more)
FileIO/: CMakeLists.txt  OGSIOVer4.cpp  OGSIOVer4.h  Reader.cpp  Reader.h  StationIO.cpp  StationIO.h  Writer.cpp  Writer.h  readNonBlankLineFromInputStream.cpp  readNonBlankLineFromInputStream.h
FileIO/FEMIO/: BoundaryConditionIO.cpp  BoundaryConditionIO.h  GeoIO.cpp  GeoIO.h  ProcessIO.cpp  ProcessIO.h
FileIO/MathIO/: CRSIO.h
FileIO/MeshIO/: LegacyVtkInterface.cpp  LegacyVtkInterface.h  OGSMeshIO.cpp  OGSMeshIO.h  vtk.cpp  vtk.h
FileIO/XmlIO/: RapidXMLInterface.cpp  RapidXMLInterface.h
GCC/: Density.cpp  Density.h  DiffAL.h  DiffOH.cpp  DiffOH.h  HKF.cpp  HKF.h  IAPWS-IF97.cpp  IAPWS-IF97.h  IO.cpp  IO.h  NR.cpp  NR.h  PITZdata.cpp  PITZdata.h  VLE.cpp  VLE.h  WATEQdata.h  eqbrm.h  logk.cpp  logk.h  species.h
GEO/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  BruteForceClosestPair.cpp  BruteForceClosestPair.h  CMakeLists.txt  ClosestPair.h  Color.cpp  Color.h  GEOObjects.cpp  GEOObjects.h  GeoObject.h  GeoType.cpp  GeoType.h  Grid.h  OctTree.h  Point.cpp  Point.h  PointVec.cpp  PointVec.h  PointWithID.h  Polygon.cpp  Polygon.h  Polyline.cpp  Polyline.h  PolylineVec.h  PolylineWithSegmentMarker.cpp  PolylineWithSegmentMarker.h  ProjectData.cpp  ProjectData.h  PropertyBounds.h  QuadTree.h  Raster.cpp  Raster.h  SensorData.cpp  SensorData.h  SimplePolygonTree.cpp  SimplePolygonTree.h  Station.cpp  Station.h  Surface.cpp  (+23 more)
MSH/: CMakeLists.txt  GridAdapter.cpp  GridAdapter.h  MSHEnums.cpp  MSHEnums.h  MeshNodesAlongPolyline.cpp  MeshNodesAlongPolyline.h  MshEditor.cpp  MshEditor.h  msh_core.cpp  msh_core.h  msh_edge.cpp  msh_edge.h  msh_elem.cpp  msh_elem.h  msh_faces.cpp  msh_faces.h  msh_lib.cpp  msh_lib.h  msh_lib_ext.cpp  msh_mesh.cpp  msh_mesh.h  msh_node.cpp  msh_node.h  msh_pnt.cpp
MSHGEOTOOLS/: ExtractMeshNodes.cpp  ExtractMeshNodes.h
MathLib/: AnalyticalGeometry.cpp  AnalyticalGeometry.h  EarClippingTriangulation.cpp  EarClippingTriangulation.h  LinkedTriangle.cpp  LinkedTriangle.h  MathTools.cpp  MathTools.h  Matrix.h  Vector3.h  max.h
MathLib/InterpolationAlgorithms/: CubicSpline.cpp  CubicSpline.h  InverseDistanceInterpolation.h  LinearIntervalInterpolation.h  PiecewiseLinearInterpolation.cpp  PiecewiseLinearInterpolation.h
MathLib/LinAlg/: GaussAlgorithm.cpp  GaussAlgorithm.h  TriangularSolve.cpp  TriangularSolve.h  VectorNorms.h
MathLib/PETSC/: PETScLinearSolver.cpp  PETScLinearSolver.h
OGS/: CMakeLists.txt  ogs_display.cpp  ogs_display.h  rf.cpp
UTL/: benchtimer.cpp  tokenbuf.cpp
UTL/GIS2FEM/: main.cpp  misc.cpp  misc.h
UTL/MSHGEOTOOLS/: ModifyMeshProperties.cpp  ModifyMeshProperties.h  filterMeshNodes.cpp  mainConvertGLIVerticalSurfaceToPolygon.cpp  mainExtractMeshNodeIDs.cpp  mainExtractMeshNodes.cpp  mainModifyMeshProperties.cpp  testMeshSearchAlgorithms.cpp
scripts/: .clang-format  run_benchmarks.sh
scripts/CMakeConfiguration/: AddBenchmark.cmake  CMakeSetup.cmake  CompilerSetup.cmake  Find.cmake  FindMKL.cmake  GeneralProjectSetup.cmake  Macros.cmake  Pack.cmake
scripts/process_benchmark_job/: process_benchmark_job.rb
tests/: CMakeLists.txt  logging.h  testBase.cpp  testGeo.cpp  testrunner.cpp
tests/GEO/: TestPointInPolygon.cpp  TestPointInTriangle.cpp
